fix: alignment for table pagination

--- a/web/public/static/styles/admin.css
+++ b/web/public/static/styles/admin.css
@@ -4,7 +4,7 @@ main {
     width: 100vw;
     align-items: center;
 
-    div {
+    > div {
         width: 100%;
 
         aside {
